Bug 478772 - Panel spacers are invisible in edit mode in plasma6
Summary: Panel spacers are invisible in edit mode in plasma6
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel Spacer widget (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
: 478773 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-20 13:32 UTC by Alex Čižinský
Modified: 2023-12-20 15:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Plasma 6 behavior (2.32 MB, image/png)
2023-12-20 13:32 UTC, Alex Čižinský
Details
Plasma 5 behavior (2.23 MB, image/png)
2023-12-20 13:33 UTC, Alex Čižinský
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Čižinský 2023-12-20 13:32:37 UTC
Created attachment 164316 [details]
Plasma 6 behavior

SUMMARY
In Plasma 6 panel spacer is transparent in panel edit mode,
unlike in Plasma 5 where the panel spacer in edit mode has color.

Resulting in it being harder to move widgets in panel with spacers. 

STEPS TO REPRODUCE
1.  Add spacer to panel
2.  Enable edit mode 

OBSERVED RESULT
In panel edit mode, the spacer is invisible, it is there, when you hover over it, but it is transparent.

EXPECTED RESULT
The Plasma 5 behavior.
Where in panel edit mode, the spacer has color.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed
KDE Plasma Version: 5.91.0 (6.0 Beta 2) -> compiled from master using kdesrc-build
KDE Frameworks Version: 5.247.0
Qt Version: 6.6.1
Comment 1 Alex Čižinský 2023-12-20 13:33:02 UTC
Created attachment 164317 [details]
Plasma 5 behavior
Comment 2 Bug Janitor Service 2023-12-20 14:49:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3712
Comment 3 Marco Martin 2023-12-20 14:53:21 UTC
*** Bug 478773 has been marked as a duplicate of this bug. ***
Comment 4 Marco Martin 2023-12-20 15:40:38 UTC
Git commit 6c205ad2d1d4ad12e2edb5b6479adea7418a027d by Marco Martin.
Committed on 20/12/2023 at 16:40.
Pushed by mart into branch 'master'.

Fix edit mode for panel spacers

now plasmoid.containment is the actual containment, so rename the
containment property to containmentitem in order to not shadow the
property

M  +3    -3    applets/panelspacer/package/contents/ui/main.qml
M  +1    -1    applets/panelspacer/plugin/panelspacer.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/6c205ad2d1d4ad12e2edb5b6479adea7418a027d