Fix edit mode for panel spacers

now plasmoid.containment is the actual containment, so rename the
containment property to containmentitem in order to not shadow the
property

BUG:478772